# idiv

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  empty_example.cpp
include/idiv/: best_rational_approx.h  big_int.h  big_uint.h  bigint.h  caching_continued_fraction.h  caching_continued_fractions.h  caching_generator.h  continued_fraction.h  continued_fractions.h  core.h  extended_linear_fractional_transform.h  frac.h  fractional_part_extremizer.h  gosper_continued_fraction.h  gosper_continued_fractions.h  idiv.h  interval.h  log_continued_fraction.h  log_continued_fractions.h  optimal_multiply_shift.h  prime_factorization.h  projective_rational.h  rational_continued_fraction.h  rational_continued_fractions.h  rewindable_continued_fractions.h  simultaneous_floor.h  tmp.h  type_erased_continued_fraction.h  unique_ptr.h  util.h  variant_storage.h  wuint.h  xi_zeta_region.h
include/idiv/continued_fraction/: extended_linear_fractional_mapping.h  generator.h  projective_rational.h
include/idiv/continued_fraction/engine/: caching.h  gosper.h  log.h  rational.h  type_erased.h
subproject/example/: CMakeLists.txt  empty_example.cpp  jeaiii_analysis.cpp  xi_zeta_region_json.cpp  xi_zeta_region_json_example_input.json
subproject/test/: CMakeLists.txt
subproject/test/source/: best_rational_approx.cpp  bigint.cpp  continued_fraction_mixin_metaprogramming.cpp  gosper_algorithm.cpp  idiv.cpp  integer_util.cpp  log_continued_fraction.cpp  main.cpp  rational_continued_fraction.cpp  tmp.cpp  unit_test.cpp  wuint.cpp
test/: CMakeLists.txt
test/source/: unit_test.cpp
